
Key to developers
-----------------

- DP   Dave Page
- AP   Andreas Pflug
- JMP  Jean-Michel Poure
- HS   Hiroshi Saito
- AHP  Adam H. Pendleton
- MP   Marc Persuy
- DAP  Darko Prenosil
- FGP  Florian G. Pflug
- MH   Magnus Hagander

Changes
-------

Date       Dev Ver    Change details
---------- --- -----  --------------
2006-05-10 DP  1.6.0  Allow pasting of entire rows in the View Data tool
                      [Edward Di Geronimo Jr]
2006-05-10 DP  1.6.0  Use escape string syntax (E'foo') where required.
2006-05-09 DP  1.6.0  Update the Windows build environment for VC++ 8.0 (now
                      free from http://msdn.microsoft.com/vstudio/express/)
2006-05-05 DP  1.6.0  Add an internal XML reporting API, HTML XSL stylesheet
                      with XSLT processing capabilities and selection of
                      schema/object/data reports.
2006-05-03 DP  1.6.0  Add support for PostgreSQL 8.2's CONNECT privilege on
                      databases, and USAGE on sequences (which also have a
                      reduced set of privileges now).
2006-05-03 DP  1.4.3  Use the correct encoding in the View Data filter options
                      per Ferenc.
2006-04-30 DP  1.6.0  Pre-encrypt passwords before sending them down the wire,
                      or displaying them in SQL statements.
2006-04-30 AP  1.6.0  Fix Explain issue with multiple lines [Miha Radej]
2006-04-30 AP  1.6.0  Scripting for view SELECT/INSERT/UPDATE
2006-04-30 AP  1.6.0  Scripting for table SELECT/INSERT/UPDATE
2006-04-30 AP  1.6.0  cleanup submenu handling to avoid touching events.cpp
                      when menus are added
2006-04-30 AP  1.6.0  Use virtual ListView for Query Tool, so no more retrieval time
2006-04-28 DP  1.4.3  Ensure the user is warned if files cannot be written.
2006-04-27 DP  1.6.0  Add an accelerator key (Delete) for deleting rows in the
                      edit grid, per Emil Nowak.