@@ -62,10 +62,15 @@ to the server being established immediately, but only registered for later use. 
 case, the connection parameters won't be validated.
 </P>
 <P>
-If you select "store password", pgAdmin stores passwords you enter in the ~/.pgpass file under *nix or %APPDATA%\postgresql\pgpass.conf
+If you select "Store password", pgAdmin stores passwords you enter in the ~/.pgpass file under *nix or %APPDATA%\postgresql\pgpass.conf
 under Win32 for later reuse. For details, see <a href='pg/libpq-pgpass.html'>pgpass documentation</a>.
 It will be used for all libpq based tools. If you want the password removed, you can
 select the server's properties and uncheck the selection any time.
+</P>
+<P>
+The "Restore env?" option determines whether or not pgAdmin will attempt to restore the 
+browser environment when you reconnect to this server. If you regularly use different
+databases on the same server you might want to turn this option off.
 </P>
 <P>
 This dialog can be launched at a later time to correct or add
