@@ -70,7 +70,7 @@
           </object>
           <object class="wxStaticText" name="stStorePwd">
             <label>Store password</label>
-            <pos>5,97d</pos>
+            <pos>5,98d</pos>
           </object>
           <object class="wxCheckBox" name="chkStorePwd">
             <label></label>
@@ -78,52 +78,62 @@
             <pos>70,97d</pos>
             <size>12,12d</size>
           </object>
-          <object class="wxStaticText" name="stDbRestr">
-            <label>DB Restriction</label>
+          <object class="wxStaticText" name="stRestore">
+            <label>Restore env?</label>
             <pos>5,112d</pos>
           </object>
+          <object class="wxCheckBox" name="chkRestore">
+            <label></label>
+            <checked>1</checked>
+            <pos>70,111d</pos>
+            <size>12,12d</size>
+          </object>
+          <object class="wxStaticText" name="stDbRestr">
+            <label>DB restriction</label>
+            <pos>5,127d</pos>
+          </object>
           <object class="wxTextCtrl" name="txtDbRestriction">
-            <pos>70,110d</pos>
+            <pos>70,125d</pos>
             <size>135,-1d</size>
           </object>
           <object class="wxStaticText" name="stService">
             <label>Service</label>
-            <pos>5,127d</pos>
+            <pos>5,142d</pos>
           </object>
           <object class="wxTextCtrl" name="txtService">
-            <pos>70,125d</pos>
+            <pos>70,140d</pos>
             <size>135,-1d</size>
           </object>
           <object class="wxStaticText" name="stTryConnect">
             <label>Connect now</label>
-            <pos>5,142d</pos>
+            <pos>5,157d</pos>
           </object>
           <object class="wxCheckBox" name="chkTryConnect">
             <label></label>
             <checked>1</checked>
-            <pos>70,140d</pos>
+            <pos>70,155d</pos>
             <size>12,12d</size>
           </object>
         </object>
         <selected>1</selected>
       </object>
       <pos>2,2d</pos>
-      <size>214,175d</size>
+      <size>214,190d</size>
     </object>
     <object class="wxButton" name="wxID_HELP">
       <label>Help</label>
-      <pos>2,180d</pos>
+      <pos>2,195d</pos>
     </object>
     <object class="wxButton" name="wxID_OK">
       <label>OK</label>
       <default>1</default>
-      <pos>113,180d</pos>
+      <pos>113,195d</pos>
     </object>
     <object class="wxButton" name="wxID_CANCEL">
       <label>Cancel</label>
-      <pos>166,180d</pos>
+      <pos>166,195d</pos>
     </object>
-    <size>218,198d</size>
+    <size>218,213d</size>
     <style></style>
   </object>
 </resource>
