@@ -35,6 +35,8 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2006-05-12 DP  1.6.0  Allow the user to choose whether or not to restore the
+                      environment when reconnecting to a particular server.
 2006-05-10 DP  1.6.0  Allow pasting of entire rows in the View Data tool
                       [Edward Di Geronimo Jr]
 2006-05-10 DP  1.6.0  Use escape string syntax (E'foo') where required.
